--- a/build.config
+++ b/build.config
@@ -86,7 +86,7 @@ CONFIG_FIRMWARE_INCLUDE_UVC=y
 CONFIG_FIRMWARE_INCLUDE_IPSET=y
 
 ### Include NFSv3 server. ~0.6MB
-#CONFIG_FIRMWARE_INCLUDE_NFSD=y
+CONFIG_FIRMWARE_INCLUDE_NFSD=y
 
 ### Include NFSv3 client. ~0.5MB
 #CONFIG_FIRMWARE_INCLUDE_NFSC=y
@@ -210,10 +210,10 @@ CONFIG_FIRMWARE_INCLUDE_TRANSMISSION=y
 CONFIG_FIRMWARE_INCLUDE_TRANSMISSION_WEB_CONTROL=y
 
 ### Include Aria2 download manager. openssl ~1.2MB, aria2 ~3.5MB
-#CONFIG_FIRMWARE_INCLUDE_ARIA=y
+CONFIG_FIRMWARE_INCLUDE_ARIA=y
 
 ### Include Aria2 WEB control. ~0.7MB
-#CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
+CONFIG_FIRMWARE_INCLUDE_ARIA_WEB_CONTROL=y
 
 ### Include TOR proxy ~2.8MB
 #CONFIG_FIRMWARE_INCLUDE_TOR=y
